# help-parcel

./: README.md  main.py  pyproject.toml  semantic_search.ipynb
app/: __init__.py  app.py
app/core/: redis_client.py
app/models/: __init__.py  faq.py  requests.py  responses.py
app/routers/: __init__.py  faq.py  health.py
app/services/: embedding_service.py  faq_service.py
data/: dump.rdb  faq_seed.csv  loader.py  test_dataset.csv
