[project]
name = "help-parcel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "load-dotenv>=0.1.0",
    "numpy>=2.4.6",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "pyprojroot>=0.3.0",
    "sentence-transformers>=5.6.0",
]
