[project]
name = "help-parcel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "fastapi>=0.139.2",
    "load-dotenv>=0.1.0",
    "numpy>=2.4.6",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "pyprojroot>=0.3.0",
    "python-multipart>=0.0.32",
    "python-ulid>=4.0.1",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "transformers==4.46.3",
    "uvicorn[standard]>=0.51.0",
]
